<resources>
    <string name="app_name">GroupIn</string>
    <string name="connectionWithSocialGroup">Se connecter avec</string>
    <string name="connectionWithEmail">Connexion avec email</string>
    <string name="continuer">Continuer</string>
    <string name="connect">Se connecter</string>
    <string name="signIn">S\'inscrire</string>
    <string name="passwordLength">6 caractères minimum</string>
    <string name="emailInvalid">Email invalide</string>
    <string name="title_activity_main">ActivityMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_address">Adresse email</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="name">Nom</string>
    <string name="displayName">Pseudo</string>
    <string name="lastname">Prénom</string>

    <!--Divers-->
    <string name="write">Ecrire ...</string>
    <string name="notifsFriendship">Demande d\'amis</string>
    <string name="notifsGroup">Demande d\'ajout dans un groupe</string>
    <string name="notifsEvents">Notifications</string>
    <string name="youOwn">Vous devez</string>
    <string name="weOwnYou">On vous doit</string>
    <string name="moneyTotal">Total</string>
    <string name="logOut">Se déconnecter</string>
    <string name="confirm">Confirmer</string>
    <string name="save">Enregistrer</string>
    <string name="user">Utilisateur</string>
    <string name="home">Accueil</string>
    <string name="participants">Participants</string>
    <string name="eventsToCome">Evénements à venir</string>
    <string name="groupChat">Communiquez avec vos amis</string>
    <string name="groupPolls">Les votes du groupe</string>
    <string name="groupMoney">Les dépenses du groupe</string>

    <!--Create an event-->
    <string name="createEvent">Créer un événement</string>
    <string name="eventName">Nom de l\'événement</string>
    <string name="eventPlace">Lieu</string>
    <string name="eventPrice">Prix</string>
    <string name="eventPriceHolder">0,00€</string>
    <string name="eventPlaceHolder">Adresse</string>
    <string name="startDate">Date début</string>
    <string name="endDate">Date fin</string>
    <string name="dateHolder">jj/mm/aaaa</string>
    <string name="eventDescHolder">Ecrire ici la description de l\'événement</string>
    <string name="eventBringBack">Quoi ramener ?</string>
    <string name="eventBringBackHolder">Dites à vos invités s\'il faut ramener  quelquechose.</string>
    <string name="eventTheme">Thème</string>
    <string name="eventSecondTheme">Sous-thème</string>

    <!--Display an event-->
    <string name="bringBack">Ramener</string>
    <string name="participate">Participer</string>
    <string name="maybe">Peut-être</string>
    <string name="doNotParticipate">Ne participe pas</string>
    <string name="pollsHistory">Historique des votes</string>
    <string name="descriptionHolder">Lorem ipsum dolor sit amet, summo iracundia nam te, legendos sententiae assueverit vel no, doming constituam nam no. Mel te mollis aliquam repudiandae, nonumes intellegat definitiones per in. Delicata inimicus ut eos, quo impetus debitis placerat ad, per oportere postulant id. Mea nonumy eirmod admodum ne, pro et mucius habemus oportere, clita voluptatum mea te.</string>


    <!--Group-->
    <string name="createGroup">Créer un groupe</string>
    <string name="groupName">Nom du groupe</string>
    <string name="groupNameHolder">Nom</string>
    <string name="groupDesc">Description</string>
    <string name="groupDescHolder">Ecrire ici la description du groupe</string>
    <string name="groupMembers">Membres du groupes</string>
    <string name="yourGroups">Mes groupes</string>

    <!--Friend-->
    <string name="myFriends">Mes amis</string>

    <!--Menu items-->
    <string name="menu_friend_tab">Amis</string>
    <string name="menu_groups_tab">Groupes</string>
    <string name="menu_events_tab">Evénements</string>
    <string name="menu_home_tab">Accueil</string>

    <!--Group menu items-->
    <string name="menu_calendar_tab">Groupe</string>
    <string name="menu_chat_tab">Chat</string>
    <string name="menu_polls_tab">Votes</string>
    <string name="menu_money_tab">Dépenses</string>

    <!-- Bills -->
    <string name="createBill">Ajouter une dépense</string>
    <string name="paidFor">J\'ai payé pour</string>
    <string name="nameBill">Achat</string>

    <!-- Polls -->
    <string name="qcm">QCM</string>
    <string name="createPoll">Créer un vote</string>
    <string name="toAnswer">Répondre</string>
    <string name="valid">Valider</string>
    <string name="question">Question</string>
    <string name="answers">Réponses</string>
    <string name="addAnswerHere">Ajouter un choix de réponse ici</string>
    <string name="questionHolder">La question que vouz voulez poser au groupe.</string>


</resources>
