<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/relativeLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:padding="3dp"
            android:background="@android:color/transparent"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/textViewCreateBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/createPoll"
            android:textColor="@color/textViewToolbarTextColor"
            android:textSize="@dimen/largeTextSize"
            />

        <TextView
            android:id="@+id/textViewValidateCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/confirm"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/textViewToolbarTextColor"
            android:textSize="@dimen/largeTextSize"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutEventDesc"
        android:layout_below="@+id/relativeLayoutTop"
        android:background="@drawable/border_bottom_light_gray"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewEventDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/textViewToolbarTextColor"
            android:textSize="@dimen/largeTextSize"
            android:layout_alignParentTop="true"
            />

        <RelativeLayout
            android:layout_below="@+id/textViewEventDesc"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_light_gray"
            >

            <EditText
                android:id="@+id/editTextPollQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/GIBlue"
                android:hint="@string/questionHolder"
                android:gravity="center_vertical|left"
                android:textStyle="italic"
                android:textSize="@dimen/normalTextSize"
                android:inputType="textCapSentences"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutPollIsQcm"
        android:layout_below="@+id/relativeLayoutEventDesc"
        android:background="@drawable/border_bottom_light_gray"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewQCM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qcm"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/textViewToolbarTextColor"
            android:textSize="@dimen/largeTextSize"
            android:layout_alignParentTop="true"
            />

        <Switch
            android:id="@+id/switchQCM"
            android:layout_toRightOf="@+id/textViewQCM"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/relativeLayoutPollIsQcm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <TextView
            android:id="@+id/textViewPaidFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answers"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/textViewToolbarTextColor"
            android:textSize="@dimen/largeTextSize"
            android:layout_alignParentTop="true"
            />

        <LinearLayout
            android:id="@+id/linearLayoutAddResponse"
            android:layout_below="@+id/textViewPaidFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAnswer"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="6"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical|left"
                android:textStyle="italic"
                android:inputType="textCapSentences"
                android:textSize="@dimen/normalTextSize"
                android:background="@android:color/transparent"
                android:hint="@string/addAnswerHere"
                />

            <ImageButton
                android:id="@+id/imageButtonAddAFriend"
                android:layout_width="wrap_content"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                android:background="@drawable/circled_background"
                android:layout_below="@+id/textViewPaidFor"
                android:layout_gravity="center"
                android:textStyle="italic"
                />

        </LinearLayout>





        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewDeletableItems"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_below="@+id/linearLayoutAddResponse"/>

    </RelativeLayout>

    <com.groupin.florianmalapel.groupin.views.GIProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

</RelativeLayout>