<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@android:color/white">
    
    <com.groupin.florianmalapel.groupin.views.GIProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="20dp"
        android:visibility="gone"
        />

        <RelativeLayout
            android:id="@+id/relativeLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark">

            <ImageButton
                android:id="@+id/imageButtonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:padding="3dp"
                android:background="@android:color/transparent"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/textViewCreateBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/createGroup"
                android:textColor="@color/textViewToolbarTextColor"
                android:textSize="@dimen/normalTextSize"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

            <TextView
                android:id="@+id/textViewValidateCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/confirm"
                android:gravity="right"
                android:paddingRight="5dp"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/textViewToolbarTextColor"
                android:textSize="@dimen/normalTextSize"
                />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutPhotoEvent"
        android:layout_below="@id/relativeLayoutTop"
        android:background="@drawable/border_light_gray"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/imageButtonAddPhotoGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_a_photo"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutBottom"
        android:layout_below="@+id/relativeLayoutPhotoEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        >

        <RelativeLayout
            android:id="@+id/relativeLayoutGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom_light_gray"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textViewGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupName"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/textViewBasicTextColor"
                android:textSize="@dimen/largeTextSize"
                />

            <EditText
                android:id="@+id/editTextGroupName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/editTextBasicTextColor"
                android:textSize="@dimen/normalTextSize"
                android:hint="@string/groupNameHolder"
                android:gravity="end"
                android:layout_marginRight="20dp"
                android:textStyle="italic"
                android:inputType="textCapSentences"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutEventDesc"
            android:layout_below="@+id/relativeLayoutGroupName"
            android:background="@drawable/border_bottom_light_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewEventDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupDesc"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/textViewBasicTextColor"
                android:textSize="@dimen/largeTextSize"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true"
                />
            
            <RelativeLayout
                android:layout_below="@+id/textViewEventDesc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_light_gray"
                >

                <EditText
                    android:id="@+id/editTextPollQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/groupDescHolder"
                    android:gravity="top|left"
                    android:textColor="@color/editTextBasicTextColor"
                    android:textSize="@dimen/normalTextSize"
                    android:inputType="textCapSentences"
                    android:background="@android:color/transparent"
                    android:padding="2dp"
                    />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/relativeLayoutEventDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textViewPaidFor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupMembers"
                android:layout_marginBottom="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/textViewBasicTextColor"
                android:textSize="@dimen/largeTextSize"
                android:layout_alignParentTop="true"
                />

            <ImageButton
                android:id="@+id/imageButtonAddAFriend"
                android:layout_width="wrap_content"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                android:background="@drawable/circled_background"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewDeletableItems"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:layout_below="@+id/textViewPaidFor"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutFriendsPopUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/colorPrimaryDarkAlpha">

        <RelativeLayout
            android:layout_width="370dp"
            android:layout_height="500dp"
            android:layout_centerInParent="true"
            android:background="@drawable/group_card_style">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFriends"
                android:layout_above="@+id/linearLayoutOkOrLeave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_bottom_light_gray">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linearLayoutOkOrLeave"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="1px"
                android:background="#dcdcdc">

                <TextView
                    android:id="@+id/textViewCancel"
                    android:layout_width="0dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_marginRight="1px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/textViewBasicTextColor"
                    android:textSize="@dimen/normalTextSize"
                    android:gravity="center"
                    android:background="@android:color/white"
                    />

                <TextView
                    android:id="@+id/textViewOk"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:gravity="center"
                    android:background="@android:color/white"
                    android:textColor="@color/textViewBasicTextColor"
                    android:textSize="@dimen/normalTextSize"
                    />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>